# stk-classify-backend

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py
app/core/: __init__.py  config.py  logger.py
app/models/: __init__.py  classification.py
app/routers/: __init__.py  classification.py  fundamentals.py  profiles.py
app/schemas/: classification.py  fundamentals.py  profiles.py
app/services/: classification.py  fundamentals.py  profiles.py
docs/: CLASSIFICATION_API_DESIGN.md
